更新AI接口BETA版
